<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context=".MainActivityFragment">

    <TextView
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    !!!  Диалог выбора размера  !!!

    <LinearLayout
        android:id="@+id/area_sizing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:visibility="gone">

        <TextView
            android:text="@string/put_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/input_size_table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TableRow>
                    <TextView android:text="@string/width"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:ems="3"
                        android:id="@+id/editWidth" />
                </TableRow>

                <TableRow>
                    <TextView android:text="@string/height"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:ems="3"
                        android:id="@+id/editHeight" />


                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/btn_sizing_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DONE!"
                android:enabled="false"
                android:layout_alignParentRight="true"
                android:layout_below="@id/input_size_table"/>

        </RelativeLayout>

    </LinearLayout>

    !!! Окно заполнения кроссворда параметрами !!!

    <LinearLayout
        android:id="@+id/area_filling"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:orientation="vertical"
        android:visibility="gone">

        <red.moccasins.nonogramssolver.nono.NonoView
            android:id="@+id/fill_nonogram"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filling_text"/>

        <TableLayout
            android:id="@+id/input_params_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TableRow>
                <TextView android:text="@string/fill_v_params"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:ems="10"
                    android:id="@+id/editVParams" />

            </TableRow>

            <TableRow>
                <TextView android:text="@string/fill_h_params"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:ems="10"
                    android:id="@+id/editHParams" />


            </TableRow>

        </TableLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_fill_solve"
                android:text="SOLVE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"/>

            <Button
                android:id="@+id/btn_fill_update"
                android:text="UPDATE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />



        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
